Source/WebCore/page/scrolling/ScrollingConstraints.cpp
@@ -130,6 +130,10 @@ TextStream& operator<<(TextStream& ts, const StickyPositionViewportConstraints& 
     ts.dumpProperty("sticky-position-at-last-layout", constraints.stickyOffsetAtLastLayout());
     ts.dumpProperty("layer-position-at-last-layout", constraints.layerPositionAtLastLayout());
 
+    ts.dumpProperty("sticky-box-rect", constraints.stickyBoxRect());
+    ts.dumpProperty("containing-block-rect", constraints.containingBlockRect());
+    ts.dumpProperty("constraining-rect-at-last-layout", constraints.constrainingRectAtLastLayout());
+
     return ts;
 }
 
