Source/WebCore/page/scrolling/ScrollingConstraints.h
@@ -174,6 +174,7 @@ public:
             && m_rightOffset == other.m_rightOffset
             && m_topOffset == other.m_topOffset
             && m_bottomOffset == other.m_bottomOffset
+            && m_constrainingRectAtLastLayout == other.m_constrainingRectAtLastLayout
             && m_containingBlockRect == other.m_containingBlockRect
             && m_stickyBoxRect == other.m_stickyBoxRect
             && m_stickyOffsetAtLastLayout == other.m_stickyOffsetAtLastLayout
